Closed
Bug 320169
Opened 18 years ago
Closed 18 years ago
Hangs while sending mail to "list in list" in address book
Categories
(MailNews Core :: Address Book, defect)
MailNews Core
Address Book
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: UlfSchaper, Assigned: standard8)
References
Details
(4 keywords)
Attachments
(1 file)
1.12 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
mscott
:
approval-branch-1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.12) Gecko/20050922 Firefox/1.0.7 (Debian package 1.0.7-1) Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.12) Gecko/20050922 Firefox/1.0.7 (Debian package 1.0.7-1) When I tried to create a "List" from many already existing cards using Drag-n-Drop, I managed (not knowingly) to add the list to itself. When trying to send a mail to this list, Thunderbird crashes. Reproducible: Always Steps to Reproduce: 1. Open Thunderbird's Address Book 2. Click on File | New | Address Book. 3. Enter a name for it, e.g. "Crashbook", and press OK. 4. Focus the "Crashbook", then create a few basic entries ("New Card"). I use: First Name: 1 Email: my_own_address@gmx.de First Name: 3 Email: my_own_address@gmx.de 5. Once those entries are created, click on "New List". I named the list "2" to make sure it is in between the usual address book entries, I don't know if that's necessary to reproduce the bug. You don't need to enter anything else besides the name in the "New List"-dialog, so just create it. 6. You will see a "+"-sign next to the "Crashbook" on the left side of the window. Once you've clicked on it, the list (named "2") will appear. 7. Now focus any item in the right list ("1", "2", "3") and press Ctrl+A to mark all items (note that the list "2" itself is also marked). 8. Next step is to drag and drop all these three entries from the right part of the window onto the item "2" in the left part of the window (which means the "2" below "Crashbook"). 9. Once you have dropped the items, another "2" will appear in the right list, so the order is now "1", "2", "2", "3". 10. Right-click the second "2" which has a "list"-icon, and choose "Write" in the drop-down menu. 11. A compose window will appear. Write a little mail, press "Send". This is the point where my Thunderbird crashes every time. Make sure you don't restart Thunderbird in the meanwhile; restarting seems to change things... Actual Results: Once one presses the "Send"-Button, Thunderbird no longer reacts (it just hangs, no KDE crashmanager or whatsoever). It grows consuming more and more memory, but CPU usage seems to be low. Expected Results: I wanted it to send the mail to every member of the list. I'm using Debian Linux' binary Thunderbird Version 1.0.7 (20051017). The same bug appears on a Gentoo box: 1.0.7 (20051018).
Comment 1•18 years ago
|
||
Could you install with talkback and get a talkback ID for the crash? http://kb.mozillazine.org/Talkback
Assignee | ||
Comment 2•18 years ago
|
||
Confirming with trunk version of SeaMonkey: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20051214 SeaMonkey/1.5a You won't get a talkback for this - it looks like its stuck in a continuous loop.
Assignee: mscott → nobody
Severity: minor → critical
Component: Address Book → MailNews: Address Book
Product: Thunderbird → Core
QA Contact: address-book → addressbook
Version: unspecified → Trunk
Reporter | ||
Comment 3•18 years ago
|
||
I've tried this "TalkBack"-thingy. Although I don't really know what I did, I did not "get" anything. Maybe this TalkBack only catches Access Violations and such? btw: Confirmed for Win32 the 1.0.7 German release I just downloaded from mozilla.com.
correct, talkback doesn't handle hangs which is what you have. please don't describe things that can't trigger talkback or the os equivalent (and the unresponsive application dialog that you trigger by asking the os to close an unresponsive application does *not* count as the os equivalent).
Severity: critical → major
Keywords: hang
Summary: Crashes while sending mail to "list in list" in address book → Hangs while sending mail to "list in list" in address book
Assignee | ||
Comment 5•18 years ago
|
||
Opps, I meant to confirm this when I changed it.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 6•18 years ago
|
||
*** Bug 324112 has been marked as a duplicate of this bug. ***
Updated•18 years ago
|
Severity: major → critical
OS: Linux → All
Hardware: PC → All
Assignee | ||
Comment 7•18 years ago
|
||
Preventing the drag and drop action part of this bug depends on bug 35837 - I've a partial patch for that which I will finish soon.
Depends on: 35837
Assignee | ||
Comment 8•18 years ago
|
||
This patch fixes the hang by preventing us from entering the same directory more than once when we're looking up addresses in mailing lists. When I've tested this either Mailnews or the server have complained that the address (of the recursive mailing list) isn't valid. I hope to put a patch in bug 35837 real soon that will stop the creation of recursive lists in the first place.
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #216445 -
Flags: superreview?(bienvenu)
Attachment #216445 -
Flags: review?(bienvenu)
Updated•18 years ago
|
Attachment #216445 -
Flags: superreview?(bienvenu)
Attachment #216445 -
Flags: superreview+
Attachment #216445 -
Flags: review?(bienvenu)
Attachment #216445 -
Flags: review+
Assignee | ||
Comment 9•18 years ago
|
||
Comment on attachment 216445 [details] [diff] [review] Fix the hang (checked in to trunk and branch) Checked into trunk. Requesting branch approval for this hang-fixing patch.
Attachment #216445 -
Attachment description: Fix the hang → Fix the hang (checked in to trunk)
Attachment #216445 -
Flags: approval-branch-1.8.1?(mscott)
Assignee | ||
Comment 10•18 years ago
|
||
Fixed on trunk, bug 35837 should cover the drag and drop issue. Therefore marking this as fixed.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Attachment #216445 -
Flags: approval-branch-1.8.1?(mscott) → approval-branch-1.8.1+
Assignee | ||
Comment 11•18 years ago
|
||
Comment on attachment 216445 [details] [diff] [review] Fix the hang (checked in to trunk and branch) checked into branch
Attachment #216445 -
Attachment description: Fix the hang (checked in to trunk) → Fix the hang (checked in to trunk and branch)
Assignee | ||
Updated•18 years ago
|
Keywords: fixed-seamonkey1.1a,
fixed1.8.1
Comment 12•17 years ago
|
||
verified fixed 1.8.1.3 on Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.3) Gecko/20070326 Thunderbird/2.0.0.0 Mnenhy/0.7.5.0 ID:2007032620 and using the steps to reproduce from comment#0 - no crash do adding the verified keyword
Keywords: verified1.8.1.3
Updated•15 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•