Bug 320169 Fix Hangs while sending mail to "list in list" in address book. r/sr=bienvenu